# blog

./: LICENSE  README.md  requirements.txt
crewai/: README.md  pyproject.toml
crewai/src/crewai/: crew.py  main.py
crewai/src/crewai/config/: agents.yaml  tasks.yaml
