[project]
name = "crewai"
version = "0.1.0"
description = "crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
crewai = "crewai.main:run"
run_crew = "crewai.main:run"
train = "crewai.main:train"
replay = "crewai.main:replay"
test = "crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
